# rfc-rag-agent

./: .dockerignore  .env.dev.example  .env.example  .gitignore  AGENT.MD  AGENTS.md  CLAUDE.md  CURRENT_STATUS.md  Dockerfile  LICENSE  README.md  alembic.ini  chainlit.md  chainlit_app.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.provider-egress.yml  docker-compose.provider-tunnel.yml  docker-compose.yml  findings.md  findings_phase35_remediation.md  findings_rfc_domain_reranker.md  findings_rfc_domain_reranker_stage2.md  findings_rfc_domain_reranker_stage3.md  handoff.md  progress.md  progress_phase35_remediation.md  progress_rfc_domain_reranker.md  progress_rfc_domain_reranker_stage2.md  progress_rfc_domain_reranker_stage3.md  pyproject.toml  subagent_a_goal.md  subagent_b_goal.md  subagent_c_goal.md  subagent_d_goal.md  task_plan.md  task_plan_phase35_remediation.md  task_plan_rfc_domain_reranker.md  task_plan_rfc_domain_reranker_stage2.md  task_plan_rfc_domain_reranker_stage3.md
.chainlit/: config.toml
alembic/: env.py
app/: __init__.py  main.py
data/: fulltext_manifest.csv  source_candidates.csv
deploy/: Caddyfile.example  nginx-https.example.conf
docs/: agent_design.md  architecture.md  brain_workflow_design.md  corpus_pipeline.md  data_sources.md  deployment_cloud.md  deployment_guide.md  deployment_https_reverse_proxy.md  evaluation_plan.md  model_provider_evaluation.md  phase48_evaluation_report.md  phase49_cloud_sync_runbook.md  phase54_completion_audit.md  phase54_formal_judge_runbook.md  phase55_completion_audit.md  progress.md  (+82 more)
(+1365 files in other folders)
