[project]
name = "rfc-rag-agent"
version = "0.1.0"
description = "A citation-first RAG agent for rock-filled concrete knowledge retrieval."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.0",
    "chainlit>=2.0.0",
    "cryptography>=3.1",
    "email-validator>=2.2.0",
    "faiss-cpu>=1.8.0",
    "fastapi>=0.115.0",
    "langgraph>=0.2.0",
    "numpy>=2.0.0",
    "pydantic-settings>=2.6.0",
    "pypdf>=5.0.0",
    "python-multipart>=0.0.20",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.0",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "httpx2>=2.3.0",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
packages = ["app"]
